service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-demo
spec:
  selector:
    app: spring-boot-demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
