route.yaml
apiVersion: apps/v1
kind: Route
metadata:
  name: spring-boot-demo
spec:
  to:
    kind: Service
    name: spring-boot-demo
